--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
         <!--<img src"facebook,instagram,whatsapp"> !-->
     
     </header>
+<footer>
+ <div class="footer">
+<div class="container">
+    <a href="img" alt="hola"></a>
+    <h1>Footer</h1>
+    
+</div>
 
+
+ </div>
+
+
+</footer>
 </body>
 </html>
